Dev sum fixes and improvements lists

--- a/journal/202207.md
+++ b/journal/202207.md
@@ -51,7 +51,7 @@ _[dcrd](https://github.com/decred/dcrd) is a full node implementation that power
 - Significantly [optimized CPU mining](https://github.com/decred/dcrd/pull/2977) code that is useful for mining on testnet. Speed stat tracking code reworked to improve accuracy and performance. Before this change the hashrate was ~0.5 Mh/s and up to 2 cores could be used efficiently. Optimized code hashes at 1.2 Mh/s on a single core and over 10 Mh/s with 10 cores.
 - Reformatted [doc comments](https://github.com/decred/dcrd/pull/2976) in the entire repository with `gofmt` in the new Go 1.19. Doing it all at once in a single commit saves future commits from extra diff clutter.
 - Fixed [broadcasting of winning tickets](https://github.com/decred/dcrd/pull/2968) when there are multiple next block candidates ("chain tips") and some of them do not yet have their block data available. Voting wallets connected to dcrd in such state were unable to re-start voting for blocks due to an error.
-- Other improvements { 2969 2970 2972; drop after review }
+- Other improvements
 
 { image candidates: 2971 }
 
@@ -111,7 +111,7 @@ Backend - other changes:
 
 - Fixed bug where [empty comments](https://github.com/decred/politeia/pull/1655) were accepted.
 - Removed [legacy websockets code](https://github.com/decred/politeia/pull/1660) which was never used for anything.
-- Code cleanup and packaging. { 1656, 1662, 1661, 1666; drop after review}
+- Code cleanup and packaging.
 - Various improvements, tweaking etc.
 
 `politeaivoter` command-line app:
@@ -121,8 +121,7 @@ Backend - other changes:
 Politeia GUI:
 
 - Removed hardcoded [legacy proposals](https://github.com/decred/politeiagui/pull/2762) and code handling them, now that they have been migrated into the current Politeia database.
-- Various tweaks and improvements. { 2805 2813 2832x3 ; drop after review }
-- Fixes { 2819 2817 2822 2811 2832x4; some may be unreleased bugs while the plugin arch was shaping up; drop after review }
+- Various tweaks, improvements, and ~8 fixes.
 
 Politeia GUI progress towards the new [plugin architecture](https://github.com/decred/politeiagui/tree/master/plugins-structure#politeiagui---plugins-structure):
 
@@ -155,8 +154,7 @@ General user-facing changes:
 General internal/other changes:
 
 - Enforced [code formatting](https://github.com/decred/dcrdex/pull/1699) check during CI builds for consistency.
-- Test infrastructure improvements { 1691 1743 1745 }
-- Other ~3 improvements { 1694 1709 1723 } and ~5 fixes { 1704 1713 1729 1746 1740 }
+- Other test infrastructure improvements, refactoring, and ~5 fixes.
 
 Decred support:
 
@@ -195,7 +193,7 @@ Merged:
 - Added DEX [server selector](https://github.com/planetdecred/godcr/pull/1011), ability to use custom server, and payment of the registration fee.
 - Fixed [handling](https://github.com/planetdecred/godcr/pull/1023) of wallet deletion. 
 - Implemented a new [Staking tab design](https://github.com/planetdecred/godcr/pull/1016).
-- Numerous bug fixes and UI tweaks. { ~893x3 ~1008x2 ~1007x2 1011x1 976x4 ; hard to count properly }
+- Numerous bug fixes and UI tweaks.
 - Translation updates.
 
 In progress:
