Eco and Outreach nits

--- a/journal/202207.md
+++ b/journal/202207.md
@@ -307,13 +307,13 @@ Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 45 nodes (+
 
 Two new VSPs were listed on decred.org and in Decrediton: [vspd.bass.cf](https://vspd.bass.cf/) by {} and [dcrhive.com](https://dcrhive.com/) by @kozel. { Recap of plans in https://www.reddit.com/r/decred/comments/vt0wrt/dcr_hive_a_new_lowish_fee_vsp_coming_to_your/ }
 
-Binance has reduced required [DCR confirmations](https://matrix.to/#/!lDZCzVQjFoJsXMPkvr:decred.org/$XSPP3KlRoIcNt3cqBG9ZbgTnwu88Kr6VcwPDTNEGZo4?via=decred.org&via=matrix.org&via=planetdecred.org) from 20 to 6 according to @jz.
+Binance has reduced required DCR confirmations from 20 back to 6 [according to @jz](https://matrix.to/#/!lDZCzVQjFoJsXMPkvr:decred.org/$XSPP3KlRoIcNt3cqBG9ZbgTnwu88Kr6VcwPDTNEGZo4?via=decred.org&via=matrix.org&via=planetdecred.org).
 
 [BisonPool](https://bisonpool.org/) has officially launched. BisonPool is a new kind of proof-of-stake pool which enables all Decred holders to earn PoS rewards, even if they cannot afford a whole ticket on their own. To make this possible, BisonPool pools user's DCR to purchase tickets. The ticket rewards are split among participants based on the amount of DCR they were able to provide. See the [announcement on Reddit](https://www.reddit.com/r/decred/comments/vyydm1/bisonpool_is_now_live/).
 
 Users have no control over voting preferences for their tickets on BisonPool.
 
-It should be noted that this is a custodial service, meaning Bisonpool has control of user's funds. There is a risk that your Decred can be stolen if you choose to use this service. Remember, not your keys, not your coins. 
+It should be noted that this is a custodial service, meaning BisonPool has control of user's funds. There is a risk that your Decred can be stolen if you choose to use this service. Remember, not your keys, not your coins.
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
@@ -321,8 +321,6 @@ Join our [#ecosystem](https://chat.decred.org/#/room/#ecosystem:decred.org) chat
 
 
 ## Outreach
-
-{ _Summarize outreach/communications/marketing/PR activity for past month and any short-term plans. "Outreach" is anything about "sending our message out". Here is the "big picture" stuff while Events and Media go into the details._ }
 
 Monde PR's achievements: 
 
