--- a/journal/202207.md
+++ b/journal/202207.md
@@ -352,22 +352,22 @@ Authors wanted! Contact @phoenixgreen in Matrix [#writers](https://chat.decred.o
 
 **Decred Magazine articles:**
 
-- [Introducing Decred developer @dreacot](https://www.decredmagazine.com/introducing-decred-developer-dreacot/) by @phoenixgreen { _keep for now and think whether to put only in Media or People, or dupe in both_ }
-- [Magic 8 ball, is this the bottom?](https://www.decredmagazine.com/magic-8-ball-is-this-the-bottom/) Technical Analysis by @Applesaucesome { _keep for now and think whether to put only in Media or Markets, or dupe in both_ }
-- [Introducing Decred developer VictorGuedes](https://www.decredmagazine.com/introducing-decred-developer-victorguedes/) by @phoenixgreen { _keep for now and think whether to put only in Media or People, or dupe in both_ }
+- [Introducing Decred developer @dreacot](https://www.decredmagazine.com/introducing-decred-developer-dreacot/) by @phoenixgreen
+- [Magic 8 ball, is this the bottom?](https://www.decredmagazine.com/magic-8-ball-is-this-the-bottom/) Technical Analysis by @Applesaucesome
+- [Introducing Decred developer VictorGuedes](https://www.decredmagazine.com/introducing-decred-developer-victorguedes/) by @phoenixgreen
 - [Sound money that iterates and evolves](https://www.decredmagazine.com/decred-iterates-where-bitcoin-is-weak-broken/) by @RonnieAmato
-- [Indecision, doubt, and a monthly dose of hopium](https://www.decredmagazine.com/indecision-doubt-and-a-monthly-dose-of-hopium/) Technical Analysis by @Applesaucesome { _keep for now and think whether to put only in Media or Markets, or dupe in both_ }
+- [Indecision, doubt, and a monthly dose of hopium](https://www.decredmagazine.com/indecision-doubt-and-a-monthly-dose-of-hopium/) Technical Analysis by @Applesaucesome
 
 **Videos:**
 
-- [Decred Explained - Improving decentralization & scalability with a hybrid consensus mechanism](https://www.youtube.com/watch?v=VjbYtYFkYI4) by Crypto Sketch 101 { _common "forked bitoin" mistake but otherwise they did some research_ }
+- [Decred Explained - Improving decentralization & scalability with a hybrid consensus mechanism](https://www.youtube.com/watch?v=VjbYtYFkYI4) by Crypto Sketch 101
 - [Decred News Update - First DAO payout w/ new rules, DEX Solidity contract audit, mixing ATH & more!](https://www.youtube.com/watch?v=QOCC4INo2TM) by @Exitus
 - [What is Decred? DCR price prediction (explained with animations)](https://www.youtube.com/watch?v=Gpa-xADhtow) by Blockchain Side
-- [DCRDATA the details that define the project - Decred Fundamentals](https://www.youtube.com/watch?v=Y6U_iWYQb9A) by @DecredSociety
+- [DCRDATA the details that define the project - Decred Fundamentals](https://www.youtube.com/watch?v=Y6U_iWYQb9A) by @phoenixgreen
 
 Livestream:
 
-- [Two-tiered economy - Decred and the State of the Market with Jake Yocom-Piatt](https://www.youtube.com/watch?v=1RBBNnrPqc0)
+- [Two-tiered economy - Decred and the State of the Market with Jake Yocom-Piatt](https://www.youtube.com/watch?v=1RBBNnrPqc0) with @Exitus and @phoenixgreen
 
 **Art and fun:**
 
