--- a/journal/202207.md
+++ b/journal/202207.md
@@ -388,14 +388,17 @@ Selected Reddit posts:
 
 ## Markets
 
-In July DCR was trading between USD 20.86-29.10 / BTC 0.001037-0.001342. The average daily rate was $23.93.
+In July DCR was trading between USD 20.86-29.10 / BTC 0.00104-0.00134. The average daily rate was $23.93.
 
-Analysis by @Applesauceseome { _reword into 1 para_ }:
+@Applesauceseome shared two [market](https://www.decredmagazine.com/magic-8-ball-is-this-the-bottom/) [reviews](https://www.decredmagazine.com/indecision-doubt-and-a-monthly-dose-of-hopium/) with charts and commentary on crypto and the broader market, and a "next gen hopium" in the last piece.
 
-- [Magic 8 ball, is this the bottom?](https://www.decredmagazine.com/magic-8-ball-is-this-the-bottom/)
-- [Indecision, doubt, and a monthly dose of hopium](https://www.decredmagazine.com/indecision-doubt-and-a-monthly-dose-of-hopium/)
+![](https://github.com/bochinchero/dcrsnapshots/raw/main/2022-07/700/DEX_Monthly_Vol_DCR.png)
 
-{ _DCRDEX updates, esp. trading volume dynamics._ }
+_Image: DCRDEX monthly volume in DCR. { upl image }_
+
+![](https://github.com/bochinchero/dcrsnapshots/raw/main/2022-07/700/DEX_Monthly_Vol_USD.png)
+
+_Image: DCRDEX monthly volume in USD. { upl image }_
 
 
 ## Relevant External
@@ -404,7 +407,7 @@ Analysis by @Applesauceseome { _reword into 1 para_ }:
 
 { _Hint: Follow or not follow the suggested grouping of stories below._ }
 
-The group of people who refer to themselves as "Bitcoin Maximalists" is fragmenting and shrinking, and July saw some significant [defections](https://www.coindesk.com/layer2/2022/07/06/nic-carter-and-the-case-for-bitcoin-mediumism/) and ruptures. Nic Carter has for many years presented a pro-Bitcoin narrative in the media consummately, earning the respect of many in the community - but when the latest investment of his fund Castle Island Ventures was set upon by Bitcoin Maximalists on twitter, Nic went on a protracted [offensive](https://medium.com/@nic__carter/setting-the-record-straight-b4e1b415e7d9) against them, calling out that group's mis-steps and failings and distancing himself from them. Later in the month Samson Mow, considered by many as an architect of the maximalist position, objected to a [comment](https://twitter.com/TheBlueMatt/status/1556448996159377414) from long time Bitcoin developer Matt Carralo and tweeted that people [should remember](https://twitter.com/Excellion/status/1556508492822745089) Matt as a person who introduced an inflation bug to Bitcoin - a controversial sentiment which drew criticism from many other Bitcoin developers, pointing out that dev work undergoes review by a whole team of people and bringing it up to disparage Matt for making comments is the kind of toxic behavior that drives people away from Bitcoin. One of the lead Bitcoin Core maintainers [announced](https://coincodecap.com/lead-bitcoin-core-maintainer-to-leave) shortly afterwards that they were stepping down from the role.
+The group of people who refer to themselves as "Bitcoin Maximalists" is fragmenting and shrinking, and July saw some significant [defections](https://www.coindesk.com/layer2/2022/07/06/nic-carter-and-the-case-for-bitcoin-mediumism/) and ruptures. Nic Carter has for many years presented a pro-Bitcoin narrative in the media consummately, earning the respect of many in the community - but when the latest investment of his fund Castle Island Ventures was set upon by Bitcoin Maximalists on Twitter, Nic went on a protracted [offensive](https://medium.com/@nic__carter/setting-the-record-straight-b4e1b415e7d9) against them, calling out that group's mis-steps and failings and distancing himself from them. Later in the month Samson Mow, considered by many as an architect of the maximalist position, objected to a [comment](https://twitter.com/TheBlueMatt/status/1556448996159377414) from long time Bitcoin developer Matt Carralo and tweeted that people [should remember](https://twitter.com/Excellion/status/1556508492822745089) Matt as a person who introduced an inflation bug to Bitcoin - a controversial sentiment which drew criticism from many other Bitcoin developers, pointing out that dev work undergoes review by a whole team of people and bringing it up to disparage Matt for making comments is the kind of toxic behavior that drives people away from Bitcoin. One of the lead Bitcoin Core maintainers [announced](https://coincodecap.com/lead-bitcoin-core-maintainer-to-leave) shortly afterwards that they were stepping down from the role.
 
 Tesla [sold](https://www.coindesk.com/business/2022/07/20/tesla-sold-936m-worth-of-bitcoin-in-second-quarter/) 75% of its BTC holdings in the second quarter of 2022, worth $936 M at time of sale. Microstrategy, the other public company to go big on buying BTC, held on to its Bitcoin but took an "impairment charge" of $918M. Michael Saylor, noted Bitcoin Maximalist [meme-crafter](https://dailycoin.com/top-10-crazy-things-michael-saylor-said-about-bitcoin/), stepped down as CEO to "[focus on buying bitcoin](https://www.coindesk.com/business/2022/08/02/microstrategy-replaces-saylor-as-ceo-with-companys-president-saylor-to-become-executive-chairman/)", but remains in control of a majority of the company's voting shares and as serving Chairman of the Board.
 
