--- a/journal/202207.md
+++ b/journal/202207.md
@@ -409,11 +409,9 @@ _Image: DCRDEX monthly volume in USD. { upl image }_
 
 The group of people who refer to themselves as "Bitcoin Maximalists" is fragmenting and shrinking, and July saw some significant [defections](https://www.coindesk.com/layer2/2022/07/06/nic-carter-and-the-case-for-bitcoin-mediumism/) and ruptures. Nic Carter has for many years presented a pro-Bitcoin narrative in the media consummately, earning the respect of many in the community - but when the latest investment of his fund Castle Island Ventures was set upon by Bitcoin Maximalists on Twitter, Nic went on a protracted [offensive](https://medium.com/@nic__carter/setting-the-record-straight-b4e1b415e7d9) against them, calling out that group's mis-steps and failings and distancing himself from them. Later in the month Samson Mow, considered by many as an architect of the maximalist position, objected to a [comment](https://twitter.com/TheBlueMatt/status/1556448996159377414) from long time Bitcoin developer Matt Carralo and tweeted that people [should remember](https://twitter.com/Excellion/status/1556508492822745089) Matt as a person who introduced an inflation bug to Bitcoin - a controversial sentiment which drew criticism from many other Bitcoin developers, pointing out that dev work undergoes review by a whole team of people and bringing it up to disparage Matt for making comments is the kind of toxic behavior that drives people away from Bitcoin. One of the lead Bitcoin Core maintainers [announced](https://coincodecap.com/lead-bitcoin-core-maintainer-to-leave) shortly afterwards that they were stepping down from the role.
 
-Tesla [sold](https://www.coindesk.com/business/2022/07/20/tesla-sold-936m-worth-of-bitcoin-in-second-quarter/) 75% of its BTC holdings in the second quarter of 2022, worth $936 M at time of sale. Microstrategy, the other public company to go big on buying BTC, held on to its Bitcoin but took an "impairment charge" of $918M. Michael Saylor, noted Bitcoin Maximalist [meme-crafter](https://dailycoin.com/top-10-crazy-things-michael-saylor-said-about-bitcoin/), stepped down as CEO to "[focus on buying bitcoin](https://www.coindesk.com/business/2022/08/02/microstrategy-replaces-saylor-as-ceo-with-companys-president-saylor-to-become-executive-chairman/)", but remains in control of a majority of the company's voting shares and as serving Chairman of the Board.
+Tesla [sold](https://www.coindesk.com/business/2022/07/20/tesla-sold-936m-worth-of-bitcoin-in-second-quarter/) 75% of its BTC holdings in the second quarter of 2022, worth $936M at time of sale. Microstrategy, the other public company to go big on buying BTC, held on to its Bitcoin but took an "impairment charge" of $918M. Michael Saylor, noted Bitcoin Maximalist [meme-crafter](https://dailycoin.com/top-10-crazy-things-michael-saylor-said-about-bitcoin/), stepped down as CEO to "[focus on buying bitcoin](https://www.coindesk.com/business/2022/08/02/microstrategy-replaces-saylor-as-ceo-with-companys-president-saylor-to-become-executive-chairman/)", but remains in control of a majority of the company's voting shares and as serving Chairman of the Board.
 
-The details of 1 billion Chinese residents have been [stolen](https://www.reuters.com/world/china/hacker-claims-have-stolen-1-bln-records-chinese-citizens-police-2022-07-04/) and made available on a dark web hacker forum. Binance CEO CZ was one of the first to [tweet](https://twitter.com/cz_binance/status/1543700689611792386) about it, stating that Binance threat security checks would be increased for the affected region, and speculating that the breach occurred because a developer leaked their keys in a blog post.
-
- { appropriate adjective } Data loss by gov coders (https://twitter.com/cz_binance/status/1543700689611792386 , https://twitter.com/cz_binance/status/1543905416748359680). Yet another reminder that the best way to protect user data is to not collect it in the first place. { link to YT video with Marco saying that to a banker, should be on @Exitus' channel }
+The details of 1 billion Chinese residents have been [stolen](https://www.reuters.com/world/china/hacker-claims-have-stolen-1-bln-records-chinese-citizens-police-2022-07-04/) and made available on a dark web hacker forum. Binance CEO CZ was one of the first to [tweet](https://twitter.com/cz_binance/status/1543700689611792386) about it, stating that Binance threat security checks would be increased for the affected region, and speculating that the breach occurred because a [developer leaked their](https://twitter.com/cz_binance/status/1543905416748359680) keys in a blog post. This is a one more proof that the best way to protect user data is to not collect it in the first place. { _link to YT video with Marco saying that to a banker, was it on @Exitus' channel?_ }
 
 The Solana Foundation is opening an "[embassy](https://www.coindesk.com/layer2/2022/07/28/is-solana-leading-crypto-into-retail-or-trailing-apple/)" in New York City - an Apple store type unit where people will be able to look at Solana NFTs and check out the forthcoming Solana phone.
 
