--- a/journal/202207.md
+++ b/journal/202207.md
@@ -6,11 +6,15 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 Highlights for July: {
 
-- DCRDEX did another dev push and got Electrum SPV wallet support merged
+- DCRDEX has added support for a new type of Bitcoin wallet, support for the Electrum SPV wallet has been merged
+
 - Politeia is getting close to a new release with legacy proposals imported and a new GUI plugin architecture
-- Any more?
-- goDCR 
-- 
+
+- After the rejection of a proposal to continue funding GoDCR, the team has announced that they will no longer be working on it
+
+- jy-p mentioned in an interview something he has been working on for Lightning Network, a novel way to use LN which is already feature-complete and should make its public debut within the next two months
+
+  
 
 }
 
