--- a/journal/202207.md
+++ b/journal/202207.md
@@ -4,7 +4,7 @@
 
 _Image: { "Title by @author. Description..." OR just "Description..." }_
 
-Highlights for July: {
+Highlights for July:
 
 - DCRDEX has added support for a new type of Bitcoin wallet, support for the Electrum SPV wallet has been merged
 
@@ -12,11 +12,7 @@ Highlights for July: {
 
 - After the rejection of a proposal to continue funding GoDCR, the team has announced that they will no longer be working on it
 
-- jy-p mentioned in an interview something he has been working on for Lightning Network, a novel way to use LN which is already feature-complete and should make its public debut within the next two months
-
-  
-
-}
+- @jy-p mentioned in an interview something he has been working on for Lightning Network, a novel way to use LN which is already feature-complete and should make its public debut within the next two months
 
 Contents:
 
@@ -26,7 +22,6 @@ Contents:
 - [Network](#network)
 - [Ecosystem](#ecosystem)
 - [Outreach](#outreach)
-- [Events](#events)
 - [Media](#media)
 - [Discussions](#discussions)
 - [Markets](#markets)
@@ -168,7 +163,7 @@ Bitcoin and Bitcoin-like asset support:
 
 - Added support for common [Electrum SPV](https://github.com/decred/dcrdex/pull/1607) wallets (BTC, LTC, BCH). DEX client can communicate with a local Electrum wallet (min version 4.2) and use its funds for trading.
 - Added a short delay for [sending ZEC](https://github.com/zcash/zcash/issues/6045) after a block is mined in load tests, to workaround an issue with Zcash [output selection](https://github.com/zcash/zcash/issues/6045).
-- Minimum required [Bitcoin Core version](https://github.com/decred/dcrdex/pull/1735) bumped to v0.21 (and v0.22 for using descriptor wallets).
+- Minimum required [Bitcoin Core version](https://github.com/decred/dcrdex/pull/1735) bumped to v0.21 (and v22 for using descriptor wallets).
 - Fixed native BTC SPV wallet getting wrecked after [sending too small](https://github.com/decred/dcrdex/pull/1705) ("dust") amount, which should not be allowed.
 - Fixed creating native BTC wallet with [too small fee](https://github.com/decred/dcrdex/pull/1657).
 
@@ -272,7 +267,7 @@ The treasury spend [tx](https://explorer.dcrdata.org/tx/453e713358bb3c5662ebc1f5
 
 As of Aug 8, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 807,000 DCR (30.7 million USD at $38.01).
 
-There were no new proposals in July. The Decred Magazine [proposal](https://proposals.decred.org/record/3bb2c7e) was approved in July with approval of 87% and turnout of 28%. Two other proposals were rejected, for GoDCR (20% Approval, 57% Turnout) and Decred Brazil marketing (19% Approval, 57% Turnout).
+There were no new proposals in July. The Decred Magazine [proposal](https://proposals.decred.org/record/3bb2c7e) was approved in July with approval of 87% and turnout of 28%. Two other proposals were rejected, for GoDCR (20% approval, 57% turnout) and Decred Brazil marketing (19% approval, 57% turnout).
 
 See Politeia Digest [issue 53](https://blockcommons.red/politeia-digest/issue053/) for more detail on the month's proposals.
 
@@ -320,7 +315,7 @@ Binance has reduced required DCR confirmations from 20 back to 6 [according to @
 
 Users have no control over voting preferences for their tickets on BisonPool.
 
-It should be noted that this is a custodial service, meaning BisonPool has control of user's funds. There is a risk that your Decred can be stolen if you choose to use this service. The identity of whoever is running Bison Pool is unknown to the community. Remember, not your keys, not your coins.
+It should be noted that this is a custodial service, meaning BisonPool has control of user's funds. There is a risk that your Decred can be stolen if you choose to use this service. The identity of whoever is running BisonPool is unknown to the community. Remember, not your keys, not your coins.
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
