--- a/journal/202207.md
+++ b/journal/202207.md
@@ -1,8 +1,8 @@
 # {DRAFT} Decred Journal – July 2022
 
-![{alt text}](../img/{file.ext} "{hover tooltip text}")
+![](../img/202207.1.github.png)
 
-_Image: { "Title by @author. Description..." OR just "Description..." }_
+_Image: News art by @OfficialCryptos._
 
 Highlights for July:
 
@@ -49,9 +49,9 @@ Other:
 - Fixed [broadcasting of winning tickets](https://github.com/decred/dcrd/pull/2968) when there are multiple next block candidates ("chain tips") and some of them do not yet have their block data available. Voting wallets connected to dcrd in such state were unable to re-start voting for blocks due to an error.
 - Smaller improvements.
 
-{ image candidates: 2971 }
+![](../img/202207.2.full.png)
 
-_Image: Another day in dcrd development. { 2971 }_
+_Image: Another day in dcrd development._
 
 
 ### dcrwallet
@@ -80,10 +80,6 @@ In progress - [voting on individual TSpend transactions](https://github.com/decr
 - The Treasury Spending tab will display pending TSpends and the ability to vote.
 - On the Home view users will see notifications of new active and not yet voted TSpends.
 - Ticket details page will show treasury key and TSpend vote choices that have been set on the VSP.
-
-![](https://user-images.githubusercontent.com/52497040/180845615-8b64fa03-a1cd-4f55-9de4-a5e64f42c6df.png)
-
-_Image: TSpend voting in Decrediton. Work in progress. { upl img }_
 
 
 ### Politeia
@@ -174,9 +170,9 @@ Ethereum support:
 - Changed how [ETH wallet's private key](https://github.com/decred/dcrdex/pull/1702) is derived to have an extra step where Ethereum BIP-39 mnemonic is generated, and then the private key is derived from that seed. This leaves the door open to exporting both the seed words and the account private key in the future.
 - Added a test for [arithmetic overflow](https://github.com/decred/dcrdex/pull/1722) in the Ethereum Solidity contract. Starting with Solidity v0.8.0 the transaction _should_ be reverted automatically if there is an overflow. The test is added just in case Solidity version used in DCRDEX is somehow reduced below v0.8.0, or if future Solidity versions remove this protection. However unlikely that may be, it's better to be safe than sorry.
 
-{ image candidates: 1648 1600 1607  }
+![](../img/202207.4.full.png)
 
-_Image: DCRDEX showing fiat equivalents to ease the transition from the legacy financial system. { 1600 }_
+_Image: DCRDEX showing fiat equivalents to ease the transition from the legacy financial system._
 
 
 ### GoDCR
@@ -203,7 +199,9 @@ In progress:
 - New [Transaction page](https://github.com/planetdecred/godcr/issues/1025) design.
 - [Proposal search](https://github.com/planetdecred/godcr/pull/1027) functionality.
 
-{ image candidates: 1008 1007 1016 }
+![](../img/202207.5.github.png)
+
+_Image: New Staking design in GoDCR._
 
 
 ### dcrdata
@@ -276,29 +274,37 @@ See Politeia Digest [issue 53](https://blockcommons.red/politeia-digest/issue053
 
 **Hashrate**: July's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=l4vb70eb-l6cmn0q7&scale=linear&bin=block&axis=time) opened at ~87 Ph/s and closed ~44 Ph/s, bottoming at 28 Ph/s and peaking at 116 Ph/s throughout the month.
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-07/700/Network_Daily_Hashrate.png)
+![](../img/202207.7.github.png)
 
-_Image: Hashrate continues to seek a new equilibrium. { upl img }_
+_Image: Hashrate continues to seek a new equilibrium._
 
 Distribution of 42 Ph/s hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Aug 1: Poolin 36%, ViaBTC 36%, F2Pool 13%, BTC.com 9%, AntPool 6%, CoinMine 1%.
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Aug 1: Poolin 42%, ViaBTC 30%, BTC.com 8%, CoinMine 1%, unknown 19%.
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-07/700/Hashrate%20Distribution%20(PHs).png)
+![](../img/202207.8.github.png)
 
-_Image: Pool hashrate distribution. { upl img }_
+_Image: Pool hashrate distribution._
 
 **Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=l4vb70eb-l6cmn0q7&axis=time&visibility=true-true&mode=stepped) varied between 215-238 DCR, with 30-day [average](https://dcrstats.com/) at 226.8 DCR (+3.1). 
 
 The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=l4vb70eb-l6cmn0q7&scale=linear&bin=block&axis=time) was 9.12-9.25 million DCR, meaning that 63.7-64.5% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=l4vb70eb-l6cmn0q7&scale=linear&bin=block&axis=time) in Proof of Stake.
 
+![](../img/202207.11.github.png)
+
+_Image: Staking participation all-time high._
+
 **VSP**: On Aug 1, ~7,170 (+20) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers. Collectively the 18 VSPs managed 17.4% of the ticket pool (+0.1%).
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-07/700/Voting%20Service%20Provider%20(VSP)%20-%20Live%20Ticket%20Distribution.png)
+![](../img/202207.9.github.png)
 
 _Image: Distribution of tickets managed by VSPs. { upl img }_
 
 **Nodes**: Node versions captured by [Decred Mapper](https://nodes.jholdstock.uk/user_agents) on Aug 9 (127 total, dcrd only): v1.7.1 - 39%, v1.7.2 - 25%, v1.7.0 - 11%, v1.7.0 dev builds - 7%, v1.8.0 dev builds - 4%, v1.6 series - 3%, v1.5 series - 0.7%, v1.4 series - 0.7%.
+
+![](../img/202207.10.github.png)
+
+_Image: dcrd node version distribution._
 
 The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 60.6-60.8%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&zoom=l4pct44v-l6ik5xc0&bin=day&axis=time&visibility=true-false) varied between 244-509K DCR.
 
@@ -394,13 +400,9 @@ In July DCR was trading between USD 20.86-29.10 / BTC 0.00104-0.00134. The avera
 
 @Applesauceseome shared two [market](https://www.decredmagazine.com/magic-8-ball-is-this-the-bottom/) [reviews](https://www.decredmagazine.com/indecision-doubt-and-a-monthly-dose-of-hopium/) with charts and commentary on crypto and the broader market, and a "next gen hopium" in the last piece.
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-07/700/DEX_Monthly_Vol_DCR.png)
+![](../img/202207.12.github.png)
 
-_Image: DCRDEX monthly volume in DCR. { upl image }_
-
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-07/700/DEX_Monthly_Vol_USD.png)
-
-_Image: DCRDEX monthly volume in USD. { upl image }_
+_Image: DCRDEX monthly volume in USD._
 
 
 ## Relevant External
