--- a/journal/202207.md
+++ b/journal/202207.md
@@ -215,8 +215,6 @@ In progress:
 - Expose more [treasury mechanics](https://github.com/decred/dcrdata/pull/1918) like quorum progress, approx. vote start/end date, Pi keys used, and more.
 - Devs are looking into [pagination problems](https://github.com/decred/dcrdata/issues/1925) on the Treasury page.
 
-{ image candidates: 1911 }
-
 
 ### Documentation
 
@@ -298,7 +296,7 @@ _Image: Staking participation all-time high._
 
 ![](../img/202207.9.github.png)
 
-_Image: Distribution of tickets managed by VSPs. { upl img }_
+_Image: Distribution of tickets managed by VSPs._
 
 **Nodes**: Node versions captured by [Decred Mapper](https://nodes.jholdstock.uk/user_agents) on Aug 9 (127 total, dcrd only): v1.7.1 - 39%, v1.7.2 - 25%, v1.7.0 - 11%, v1.7.0 dev builds - 7%, v1.8.0 dev builds - 4%, v1.6 series - 3%, v1.5 series - 0.7%, v1.4 series - 0.7%.
 
@@ -426,7 +424,7 @@ Most information from third parties is relayed directly from the source after a 
 
 Credits (alphabetical order):
 
-- writing, editing, publishing: { bee, bochinchero, Exitus, jz, l1ndseymm, phoenixgreen, richardred }
-- reviews and feedback: { buck54321 }
-- title image: { OfficialCryptos }
+- writing, editing, publishing: bee, bochinchero, Exitus, jz, l1ndseymm, phoenixgreen, richardred
+- reviews and feedback: buck54321
+- title image: OfficialCryptos
 - funding: Decred stakeholders
