--- a/journal/202207.md
+++ b/journal/202207.md
@@ -315,6 +315,8 @@ Two new VSPs were listed on decred.org and in Decrediton: [vspd.bass.cf](https:/
 
 Binance has reduced required DCR confirmations from 20 back to 6 [according to @jz](https://matrix.to/#/!lDZCzVQjFoJsXMPkvr:decred.org/$XSPP3KlRoIcNt3cqBG9ZbgTnwu88Kr6VcwPDTNEGZo4?via=decred.org&via=matrix.org&via=planetdecred.org).
 
+[Luxor](https://luxor.tech/) has shut down its Decred mining pool about 1 month past the original deadline of Jun 10 that was [reported by a Reddit user](https://www.reddit.com/r/decred/comments/v6d0lw/luxor_shutdown_their_dcr_mining_pool/).
+
 [BisonPool](https://bisonpool.org/) has officially launched. BisonPool is a new kind of proof-of-stake pool which enables all Decred holders to earn PoS rewards, even if they cannot afford a whole ticket on their own. To make this possible, BisonPool pools users' DCR to purchase tickets. The ticket rewards are split among participants based on the amount of DCR they were able to provide. See the [announcement on Reddit](https://www.reddit.com/r/decred/comments/vyydm1/bisonpool_is_now_live/).
 
 Users have no control over voting preferences for their tickets on BisonPool.
