--- a/journal/202208.md
+++ b/journal/202208.md
@@ -272,27 +272,27 @@ See Politeia Digest [issue {}]({}) for more details on the month's proposals.
 
 _Image: { hashrate chart }_
 
-Distribution of {} Ph/s hashrate [reported](https://miningpoolstats.stream/decred) by the pools on {date}: {PoolName n%, ...}.
+Distribution of 79 Ph/s hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Sep 1: Poolin 66%, F2Pool 25%, BTC.com 5%, AntPool 3.4%, CoinMine 0.8%.
 
 { _Hint: Fallback link for pool distribution: https://dcrstats.com/pow ._ }
 
-Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by {date}: {PoolName n%, ...}.
+Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Sep 1: Poolin 61%, BTC.com 5%, CoinMine 0.7%, unknown 33%.
 
 _Image: { hashrate pool distribution }_
 
-**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&axis=time&visibility=true-true&mode=stepped) {_monthly zoom_} varied between {n}-{n} DCR, with 30-day [average](https://dcrstats.com/) at {n.n} DCR (+{n.n}). { use same t1-t2 for zoom }
+**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&axis=time&visibility=true-true&mode=stepped) {_monthly zoom_} varied between {n}-{n} DCR, with 30-day [average](https://dcrstats.com/) at 230.2 DCR (+3.4). { use same t1-t2 for zoom }
 
 The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&scale=linear&bin=block&axis=time) {_monthly zoom_} was {n.nn}-{n.nn} million DCR, meaning that {n.n}-{n.n}% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&scale=linear&bin=block&axis=time) {_monthly zoom_} in Proof of Stake.
 
 { _Add a recap of ticket price action if it was interesting._ }
 
-**VSP**: On {date}, ~{n} (+{n}) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers. Collectively the {n} VSPs managed {n.n}% of the ticket pool (+{n.n}%).
+**VSP**: On Sep 1, ~7,140 (-30) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers. Collectively the 18 VSPs managed 17.7% of the ticket pool (+0.3%).
 
 _Image: { vsp live ticket distribution }_
 
 **Nodes**: Throughout August there were around {n} reachable nodes according to [PD Analytics](https://analytics.planetdecred.org/nodes).
 
-Node versions captured by [Decred Mapper](https://nodes.jholdstock.uk/user_agents) on {date} ({n} total, dcrd only): v{} - {n}%, ...
+Node versions captured by [Decred Mapper](https://nodes.jholdstock.uk/user_agents) on Sep 1 (166 total, dcrd only): v1.7.1 - 31%, v1.7.2 - 31%, v1.7.4 - 17%, v1.7.0 - 8%, v1.8.0 dev builds - 2%, v1.7.0 dev builds - 1%, other - 10%.
 
 _Image: { node version distribution }_
 
