--- a/journal/202208.md
+++ b/journal/202208.md
@@ -346,6 +346,18 @@ Join our [#ecosystem](https://chat.decred.org/#/room/#ecosystem:decred.org) chat
 
 { _Put notable community content efforts or new projects at the beginning. e.g. a new website, new podcast series, or an important guide how to make the network more robust._ }
 
+Decred Magazine engagement stats for August:
+
+- Total number of articles on DM: 305
+- Newsletter subscribers: 55
+- New posts and newsletters sent: 13
+- Active social media campaigns: 5
+- Social media posts: 75
+- Post clicks: 224
+- Likes: 412
+- Re-tweets: 73
+- Social media followers across all platforms and accounts: 927
+
 { _Hint: For bullet lists below, use the following format: [Sentence case title]({link}) by @author - optional comment._ }
 
 **Selected articles:**
