add gov finances

--- a/journal/202208.md
+++ b/journal/202208.md
@@ -245,9 +245,9 @@ Community stats as of {date} (compared to {date}):
 
 { _Hint: Currently this is a mix of finances and governance. We may add the separate Finances section in the future._ }
 
-In August the new [treasury](https://dcrdata.decred.org/treasury) received {n} DCR worth ${} at August's average rate of ${}. {} DCR was spent to pay contractors, worth ${} at August's rate, or ${} at July's billing rate of ${}.
+In August the new [treasury](https://dcrdata.decred.org/treasury) received 9,219 DCR worth $294K at August's average rate of $31.93. 3,788 DCR was spent to pay contractors, worth $121K at August's rate, or $91K at July's billing rate of $23.93.
 
-{ _Treasury spend tx recap: how many outputs, min, max DCR_ }
+The treasury spend [tx](https://explorer.dcrdata.org/tx/c3f990e6c43babdfb782be90ca58ca6f6f8b6bcd3da96a622aba098d4e88c012) was mined on August 27, it had 23 outputs ranging from 0.7 DCR to 1,168  DCR. The transaction was approved with 6,795 Yes votes and 0 No votes.
 
 { _Any other activity with the legacy or new treasury._ }
 
