Dev DCRDEX part 2

--- a/journal/202208.md
+++ b/journal/202208.md
@@ -12,9 +12,9 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 { _Month's highlights, no links here, 5-7 bullets max._
 
-- 
+- DCRDEX v0.5.2 released
 
-- 
+- DCRDEX token trading merged for the next v0.6 release
 
 - 
 
@@ -71,6 +71,8 @@ _[dcrwallet](https://github.com/decred/dcrwallet) is a wallet server used by com
 { _Check https://github.com/decred/dcrwallet/commits/master ._}
 
 - {}
+
+{ _Also check the release branch https://github.com/decred/dcrwallet/commits/release-v1.7 ._ }
 
 
 ### dcrctl
@@ -153,10 +155,29 @@ _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecti
 
 { _Check https://github.com/decred/dcrdex/commits/master ._}
 
+Preparations and fixes for the v0.5 release:
+
 - Moved [wiki contents](https://github.com/decred/dcrdex/pull/1714) to [docs/wiki](https://github.com/decred/dcrdex/tree/master/docs/wiki) in the main repo. Now all docs are in one place and can be updated and reviewed by more contributors via the pull request workflow.
+- Fixed confusing "connectivity restored" [notification](https://github.com/decred/dcrdex/pull/1719) on first connection. { _minor_ }
 - Fixed canceled orders showing as [100% filled](https://github.com/decred/dcrdex/pull/1744) { _minor_ }
-- Fixed confusing "connectivity restored" [notification](https://github.com/decred/dcrdex/issues/1716) on first connection.
-- Fixes { 1751 1719 }
+- Fixed several client wallet [hanging issues](https://github.com/decred/dcrdex/pull/1732).
+- Fixed a [deadlock](https://github.com/decred/dcrdex/pull/1756) in BTC SPV wallet. { _minor?_ }
+- Fixed [switching wallet type](https://github.com/decred/dcrdex/pull/1759) to SPV.
+- Rewritten much of [README](https://github.com/decred/dcrdex/pull/1747) for the v0.5 release.
+- Fixed several [deadlock and lock contention](https://github.com/decred/dcrdex/pull/1739) issues in the trade engine.
+- Fixed having to [refresh Wallets page](https://github.com/decred/dcrdex/pull/1757) manually after creating a wallet.
+- Fixed incorrect [error return](https://github.com/decred/dcrdex/pull/1764) when looking up BTC outputs. { _minor_ }
+- Updated to use the new [testnet3 rules](https://github.com/decred/dcrdex/pull/1773) and switched LTC block explorer from bitaps.com to sochain.com.
+- Fixed [match status](https://github.com/decred/dcrdex/pull/1772) display for revoked matches.
+- Backend fixes { 1751 1780 }
+- UI fixes { 1736x2 1776 }
+- Maintenance { 1753 1774 }
+
+Ethereum support:
+
+- Enabled [token trading](https://github.com/decred/dcrdex/pull/1622) on the UI with new wallet creation flow for token wallets that includes a step to sync the parent.
+
+{ _Cover v0.5.0, v0.5.1 and v0.5.2 released on Aug 29_ }
 
 
 ### GoDCR
