--- a/journal/202208.md
+++ b/journal/202208.md
@@ -272,9 +272,7 @@ The treasury spend [tx](https://explorer.dcrdata.org/tx/c3f990e6c43babdfb782be90
 
 { _Any other activity with the legacy or new treasury._ }
 
-As of Sep 3, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 810,984 DCR (24.3 million USD at $29.95).
-
-One proposal was published and approved in August. [D.R.E.A.M. 2: Dream Harder](https://proposals.decred.org/record/5ef57f7) was submitted by @jy-p working with @jholdstock and @jz to produce a revised decred.org prototype site along the lines of the [D.R.E.A.M. proposal](https://proposals.decred.org/record/b243fa7) which had the best voting response (48% approval) but did not pass for the decred.org [messaging RFP](https://proposals.decred.org/record/0917c1d) which was decided in September 2020. The present proposal to deploy the new design/messaging at a cost of $7,660 ($3K of which is reserved for translations) was approved with 97% Yes votes and 59% Turnout.
+As of {date}, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is {n} DCR ({n} million USD at ${n.nn}).
 
 { _High-level recap of decision-making activity and most important events._ }
 
@@ -441,6 +439,18 @@ In August DCR was trading between USD {n.nn}-{n.nn} / BTC {n.nnnnn}-{n.nnnnn}. T
 { _Hint: Besides dramatic "epic fails", try to also report some "epic wins" in areas relevant to Decred. We can learn from both._ }
 
 { _Hint: Follow or not follow the suggested grouping of stories below._ }
+
+Tornado Cash, an Ethereum mixing service, was added to the OFAC sanctions list by the [US Treasury](https://home.treasury.gov/news/press-releases/jy0916), for its role in facilitating the laundering of proceeds of hacks by North Korea. The sanctions cover a set of Ethereum addresses associated with the mixer, and in the immediate aftermath of the sanctions being unveiled some trolls were [sending](https://www.coindesk.com/policy/2022/08/09/someone-is-trolling-celebs-by-sending-eth-from-tornado-cash/) small amounts of mixed ETH from Tornado to the wallets of celebrities to taint their funds. Circle quickly [blacklisted](https://twitter.com/bantg/status/1556712790894706688) $75K of USDC belonging to Tornado users. GitHub [removed](https://www.theregister.com/2022/08/10/github_tornado_cookies/) the repositories for Tornado Cash and also the accounts of at least 3 developers who worked on it.
+
+Two days later a developer who worked on Tornado Cash, Alexey Pertsev, was [arrested](https://www.fiod.nl/arrest-of-suspected-developer-of-tornado-cash/) in Amsterdam by the Dutch Fiscal Information and Investigation Service on suspicion of helping to facilitate money laundering. The Dutch authorities are holding Pertsev for 3 months until a trial can be arranged, but so far they have not been charged with a specific crime, and their wife has [denied links]() to Russian espionage.
+
+A whole DeFi ecosystem on Solana (Saber protocol) was [revealed](https://www.coindesk.com/layer2/2022/08/04/master-of-anons-how-a-crypto-developer-faked-a-defi-ecosystem/) to be the work of two brothers, a lot of fake developer accounts, and some techniques for double or triple counting the assets locked into the protocol.
+
+Maker DAO has been supporting the DAI stablecoin since launch in 2019 and its governance serves to determine how the MKR ecosystem develops. Most participants in Maker DAO governance seem to agree that it is not going well and needs to change, but there are disagreements about how it should change. In a recent [podcast debade](ttps://www.youtube.com/watch?v=UJ_kfHdCLUk) MKR founder Rune Christensen made a case that people working for the DAO were getting too comfortable and trying to expand the organisation in ways which suited themselves. Hasu (pseudonymous crypto researcher, MKR governance delegate) represented the side of DAO contributors who could see that MKR holders were being presented with sub-optimal proposal decisions which they were not always well suited to answer - but several proposals to create new core groups which would provide a certain kind of intelligence to the token holders were recently rejected. One twitter [thread](https://twitter.com/g_dip/status/1564716178819653632) on the subject adds a 3rd faction, decentralization maximalists who want to see the smart contracts locked down or "ossified" so that they cannot be changed in response to changing regulation. Rune is however the main character whose return from semi-retirement heralded a change in direction away from what the DAO's contributors and in some cases VC backers were planning. Rune has provided an epic "End Game" plan but it is extremely long and complex, split into several long forum posts, so it's not clear how many people support that.
+
+[Leaked videos](https://cryptoleaks.info/case-no-3) have been circulated of lawyer Kyle Roche bragging about their work with Ava Labs, which included tying other competing projects up with frivolous lawsuits. Ava labs have [denied](https://www.coindesk.com/business/2022/08/29/obvious-nonsense-prominent-blockchains-founder-dismisses-smear-campaign-allegation/) the sensational account of their arrangement with the firm which cryptoleaks published, and Kyle Roche has [withdrawn](https://www.coindesk.com/business/2022/08/31/crypto-lawyer-kyle-roche-withdraws-from-tether-bitfinex-tron-and-bitmex-lawsuits-after-cryptoleaks-scandal/) from a number of the aforementioned class action lawsuits.
+
+
 
 { _Cryptocurrency L1 tech: PoW, ASIC resistance, full nodes, network security, etc._ }
 
