remove vspd, add Go 1.19 in other

--- a/journal/202208.md
+++ b/journal/202208.md
@@ -110,16 +110,6 @@ _[Politeia](https://github.com/decred/politeia) is Decred's proposal system. It 
 - {}
 
 
-### vspd
-
-_[vspd](https://github.com/decred/vspd) is server software for running a Voting Service Provider. A VSP votes on behalf of its users 24/7 and cannot steal funds._
-
-{ _Check https://github.com/decred/vspd/commits/master ._}
-
-- {}
-
-
-
 ### dcrpool
 
 _[dcrpool](https://github.com/decred/dcrpool) is server software for running a mining pool._
@@ -219,6 +209,7 @@ _[dcrweb](https://github.com/decred/dcrweb) is the source code for the decred.or
 
 - { _Smaller/common things go here._ }
 - { _More exotic dev sources: https://github.com/xaur/decred-news/blob/docs/sources.md#development ._ }
+- Updated to Go [1.19](https://tip.golang.org/doc/go1.19) in various repos.
 
 
 ## People
