--- a/journal/202208.md
+++ b/journal/202208.md
@@ -176,7 +176,9 @@ _[dcrdata](https://github.com/decred/dcrdata) is an explorer for Decred blockcha
 
 { _Check https://github.com/decred/dcrdata/commits/master ._}
 
-- {}
+- [Fixed](https://github.com/decred/dcrdata/pull/1929) treasury pagination in explorer.
+- Fixed [Incorrect treasury](https://github.com/decred/dcrdata/pull/1930) balance on home page.
+- Various updates and other fixes
 
 
 ### Documentation
