--- a/journal/202208.md
+++ b/journal/202208.md
@@ -141,15 +141,42 @@ Preparations and fixes for the v0.5 release:
 - Fixed incorrect [error return](https://github.com/decred/dcrdex/pull/1764) when looking up BTC outputs. { _minor_ }
 - Updated to use the new [testnet3 rules](https://github.com/decred/dcrdex/pull/1773) and switched LTC block explorer from bitaps.com to sochain.com.
 - Fixed [match status](https://github.com/decred/dcrdex/pull/1772) display for revoked matches.
+- Embed site resources using [`go:embed`](https://github.com/decred/dcrdex/pull/1710).
+- Fixed [changing DEX server](https://github.com/decred/dcrdex/pull/1817) when the server is down. { _minor?_ }
 - Backend fixes { 1751 1780 }
-- UI fixes { 1736x2 1776 }
+- Client fixes { 1736x2 1776 1799 1821 1829 }
 - Maintenance { 1753 1774 }
+
+Changes towards the next v0.6 release:
+
+- End user (trader) documentation [moved](https://github.com/decred/dcrdex/pull/1715) to [its own document](https://github.com/decred/dcrdex/blob/master/docs/wiki/Client-Installation-and-Configuration.md).
+- Use epoch's first and last [match price](https://github.com/decred/dcrdex/pull/1781) for candle's start and end rate. This will produce more accurate candlestick chart.
+- Restyled the [Wallets page](https://github.com/decred/dcrdex/pull/1700). The new style is responsive and adjusts to desktop, tablet and mobile screen sizes.
+- Server installation guide [moved](https://github.com/decred/dcrdex/pull/1793) to [its own document](https://github.com/decred/dcrdex/blob/master/docs/wiki/Server-Installation.md).
+- Updated [dependencies](https://github.com/decred/dcrdex/pull/1785) to latest btcsuite, go-ethereum, go-bip39 and minimum Go 1.18.
+- Added a guide to get started with [writing fuzzing tests](https://github.com/decred/dcrdex/pull/1766).
+- Automated [Markdown linting](https://github.com/decred/dcrdex/pull/1796) to ensure consistent formatting.
+- Fixed [concurrent logins](https://github.com/decred/dcrdex/pull/1761) { _minor_ }
+- Adjusted [order cancellation](https://github.com/decred/dcrdex/pull/1682) policy to penalize too fast cancellations, but if the order sits for one full epoch it can be cancelled for "free" (without hurting user's reputation score). This should improve trading experience [for humans](https://github.com/decred/dcrdex/pull/1682#issuecomment-1165059876).
+- Transaction wait time made [configurable](https://github.com/decred/dcrdex/pull/1789) by server operator. It is the maximum time server will search for client-reported transactions before erroring.
+- Updated Node.js [dependencies](https://github.com/decred/dcrdex/pull/1792) for v0.6 dev cycle.
+- Implemented [live wallet reconfiguration](https://github.com/decred/dcrdex/pull/1786) for DCR and ETH. It allows to correctly track locked coins across changes to wallet configuration.
+- Fixed [API errors](https://github.com/decred/dcrdex/pull/1806) showing up in bell notifications.
+- Translated page templates are now generated [at runtime](https://github.com/decred/dcrdex/pull/1826). It removes the need to re-generate them manually and simplifies updating/adding new languages.
+- Support both released v1.7 and in-development v1.8 [versions of dcrd and dcrwallet](https://github.com/decred/dcrdex/pull/1822). { _group in maintenance?_ }
+- Client fixes { 1787 1791 1758 1800 1810 1798x2 1811 1823 }
+- Maintenance { 1795 1801 }
+- Fixes { 1802 1809 }
 
 Ethereum support:
 
-- Enabled [token trading](https://github.com/decred/dcrdex/pull/1622) on the UI with new wallet creation flow for token wallets that includes a step to sync the parent.
+- Enabled [token trading](https://github.com/decred/dcrdex/pull/1622) on the UI with new wallet creation flow for token wallets that includes a step to sync the parent chain (such as Ethereum).
 
 { _Cover v0.5.0, v0.5.1 and v0.5.2 released on Aug 29_ }
+
+{ _Better group changes_ }
+
+{ image candidates: illustration of 1622 would be cool, 1700 (!) }
 
 
 ### GoDCR
