--- a/journal/202208.md
+++ b/journal/202208.md
@@ -213,7 +213,14 @@ _[GoDCR](https://github.com/planetdecred/godcr) is a lightweight desktop GUI wal
 { _Check https://github.com/planetdecred/godcr/commits/master ._}
 
 - Added function to dcrlibwallet to save [TSpend voting policy]({253}) locally and in VSPs managing the tickets.
-- {}
+- Disable receive, send and mixer navigation option for [watch only wallets](https://github.com/planetdecred/godcr/pull/1051).
+- Fix to top navigation [dark mode](https://github.com/planetdecred/godcr/pull/1049).
+- Fix [app crash](https://github.com/planetdecred/godcr/pull/1048) after wallet restore is complete.
+- Add v2 [wallet settings page](https://github.com/planetdecred/godcr/pull/1036).
+- Fix crash in [proposal details](https://github.com/planetdecred/godcr/pull/1045).
+- Update [top-level setting page](https://github.com/planetdecred/godcr/pull/1035) UI v2.
+- Implement [layout for treasury spending](https://github.com/planetdecred/godcr/pull/975). (image candidate).
+- Update [color and icon](https://github.com/planetdecred/godcr/pull/1028) on top bar navigation.
 
 
 ### dcrdata
