--- a/journal/202208.md
+++ b/journal/202208.md
@@ -375,6 +375,17 @@ Join our [#ecosystem](https://chat.decred.org/#/room/#ecosystem:decred.org) chat
 
 { _Summarize outreach/communications/marketing/PR activity for past month and any short-term plans. "Outreach" is anything about "sending our message out". Here is the "big picture" stuff while Events and Media go into the details._ }
 
+Monde PR’s achievements: 
+
+- Pitched Decred to one PR opportunity
+- Responded to three requests for comments
+
+Secured the following news articles:
+
+- An article in [Forbes Advisor](https://www.forbes.com/advisor/investing/cryptocurrency/what-are-meme-coins-are-they-worth-investing-in/) featuring commentary from @jz on the merit of meme coins. The piece was syndicated to three publications including [Nasdaq](https://www.nasdaq.com/articles/what-are-meme-coins-are-they-worth-investing-in). 
+- An article in [Cointelegraph](https://cointelegraph.com/news/bitcoin-lightning-network-vs-visa-and-mastercard-how-do-they-stack-up) featuring commentary from @jy-p on how Bitcoin’s Lightning Network stacks up against Solana and Visa. The piece was syndicated to thirty publications including [Bitcoin Insider](https://www.bitcoininsider.org/article/181590/bitcoin-lightning-network-vs-visa-and-mastercard-how-do-they-stack) and [Crypto News Canada](https://cryptonewscanada.com/bitcoin-lightning-network-vs-visa-and-mastercard-how-do-they-stack-up/). 
+- The Cointelegraph piece also appeared in Portuguese on [Cointelegraph Brazil](https://cointelegraph.com.br/news/bitcoin-lightning-network-vs-visa-and-mastercard-how-do-they-stack-up).
+
 
 ## Events
 
