--- a/journal/202208.md
+++ b/journal/202208.md
@@ -377,7 +377,7 @@ Join our [#ecosystem](https://chat.decred.org/#/room/#ecosystem:decred.org) chat
 
 Monde PR’s achievements: 
 
-- Pitched Decred to one PR opportunity
+- Pitched Decred to two PR opportunity
 - Responded to three requests for comments
 
 Secured the following news articles:
