--- a/journal/202208.md
+++ b/journal/202208.md
@@ -450,6 +450,7 @@ Decred Magazine engagement stats for August:
 
 - [Decred Video in Arabic](https://www.youtube.com/watch?v=B8Y3-z9Bs9A)
 - [Coin des Tages: Decred (DCR)](https://www.youtube.com/shorts/6PfekNUZq_k) by @KryptoZenny
+- [DCR DecreD EXPLOSE 😱🚀 J'ACHETE OU PAS?🤔 DOSSIER COMPLET](https://www.youtube.com/watch?v=6cWhwYQ9tbE) by @Crypto for EveryOne
 
 
 ## Discussions
