--- a/journal/202208.md
+++ b/journal/202208.md
@@ -240,7 +240,34 @@ _[dcrweb](https://github.com/decred/dcrweb) is the source code for the decred.or
 
 { _Check https://github.com/decred/dcrweb/commits/master ._}
 
-- {}
+[Decred.org](https://decred.org/) has been completely overhauled as approved by stakeholders in the [D.R.E.A.M. 2: Dream Harder](https://proposals.decred.org/record/5ef57f7) proposal. New messaging is Decred — Money Evovled.
+
+Summary of [site changes](https://github.com/decred/dcrweb/pull/1056):
+
+- Complete overhaul of theme and style.
+- Updated messaging using strong words and simple language.
+- Support and Publication sections added to /community.
+- Removed /chat subpage, URL redirected to http://chat.decred.org.
+- Removed /brief, /sustainable, /adaptable, /security, and /history subpages.
+- Removed legacy stakepools from /vsp.
+
+Technical details:
+
+- Site is implemented as far as possible without JavaScript. JS is used for:
+    - Top navigation bar on mobile
+    - Populating VSP table
+    - OS specific download links on homepage
+- Previous site was built on drag-and-drop editor Webflow. The Webflow CSS has been replaced with Bootstrap.
+- All site CSS (including Bootstrap) is compiled from SCSS source.
+- New site does not contain any videos or Lottie animations, so all css/js for those has been removed.
+- apps.yml and current_release.yml and links.yml consolidated to remove duplcation. All wallet links and versions now reside in one file wallets.yml.
+- SourceSansPro font replaced with a mixture of Poppins and Inter. SourceCodePro remains the monospace font.
+
+Other minor changes:
+
+- Update [Matrix support](https://github.com/decred/dcrweb/pull/1060) link.
+- Remove [defunct exchanges](https://github.com/decred/dcrweb/pull/1059) and unmaintained wallets. Updated links.
+
 
 { _Check for other new/updated repos in:_
 
