Dev dcrctl, Decrediton nits

--- a/journal/202208.md
+++ b/journal/202208.md
@@ -103,7 +103,7 @@ _[dcrctl](https://github.com/decred/dcrctl) is a command-line client for dcrd an
 
 { _Check https://github.com/decred/dcrctl/commits/master ._}
 
-- Update to latest Go [modules](https://github.com/decred/dcrctl/pull/49) and [action versions](https://github.com/decred/dcrctl/pull/48).
+- Updated to latest Go [modules](https://github.com/decred/dcrctl/pull/49) and [GitHub action](https://github.com/decred/dcrctl/pull/48) versions.
 
 
 ### Decrediton
@@ -112,10 +112,10 @@ _[Decrediton](https://github.com/decred/decrediton) is a full-featured desktop w
 
 { _Check https://github.com/decred/decrediton/commits/master ._}
 
-- Add the ability to [refresh](https://github.com/decred/decrediton/pull/3785) the DEX window with F5 key. 
-- Treasury spending page now uses [testnet PiKeys](https://github.com/decred/decrediton/pull/3776) on testnet and it properly links to the testnet dcrd source code.
-- Renamed ''Stakeshuffle++'' to ''StakeShuffle'' in [privacy tab](https://github.com/decred/decrediton/pull/3779).
--  3 Fixes. Various backend updates.
+- Added the ability to [refresh](https://github.com/decred/decrediton/pull/3785) the DEX window with F5 key.
+- Treasury spending page now uses [testnet Pi keys](https://github.com/decred/decrediton/pull/3776) on testnet and it properly links to the testnet dcrd source code to verify them.
+- Renamed "Stakeshuffle++" to "StakeShuffle" in [Privacy tab](https://github.com/decred/decrediton/pull/3779).
+- 4 fixes { 3783 3775 3784 3792 } and various backend updates.
 
 
 ### Politeia
