--- a/journal/202208.md
+++ b/journal/202208.md
@@ -16,7 +16,7 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 - DCRDEX v0.5.2 is out for impatient traders. Decrediton integration update is in the works.
 
-- 
+- Politeia v1.4.0 released
 
 - 
 
@@ -130,8 +130,38 @@ _[Politeia](https://github.com/decred/politeia) is Decred's proposal system. It 
 
 }
 
-- {}
+v1.4.0 release notes:
 
+- https://github.com/decred/politeia/releases/tag/v1.4.0
+- https://github.com/decred/politeiagui/releases/tag/v1.4.0
+
+Backend:
+
+- Optimized and improved validation in [`dbutil -migrate`](https://github.com/decred/politeia/pull/1667) command (used to migrate from one user database to another).
+- Store [app version](https://github.com/decred/politeia/pull/1671) as a single string to simplify the release process.
+- Various [updates](https://github.com/decred/politeia/pull/1672) for Go 1.19 (CI configuration, GitHub Actions, linter, and [code formatting](https://github.com/decred/politeia/pull/1673)).
+- Delete [expired user sessions](https://github.com/decred/politeia/pull/1669) on startup. Tests for the session database have been [rewritten](https://github.com/decred/politeia/pull/1674) to fix numerous issues.
+- Updated [`dbutil -dump`](https://github.com/decred/politeia/pull/1676) command to work with all of the user database implementations.
+- Freeze [Trillian trees](https://github.com/decred/politeia/pull/1670) that correspond to Politeia records that no longer allow updates (such as Censored or Archived). Politeia's use of Trillian is quite different from it's intended use case and it results in high CPU load. Freezing some trees should reduce it.
+- Fixes { 1675 }
+
+Current GUI:
+
+- Keep [quorum label](https://github.com/decred/politeiagui/pull/2836) for Approved and Rejected proposals.
+- Fixed common [invalid signature](https://github.com/decred/politeiagui/pull/2842) error for new keys that were used before getting registered on the server.
+- Fixed 2 bugs with legacy [RFP proposals](https://github.com/decred/politeiagui/pull/2845) and ~6 bugs with legacy proposal [comments](https://github.com/decred/politeiagui/pull/2852).
+
+GUI remake on the new [plugin architecture](https://github.com/decred/politeiagui/tree/master/plugins-structure#politeiagui---plugins-structure):
+
+- Deduplicated common [Babel and Jest](https://github.com/decred/politeiagui/pull/2838) configuration.
+- Added various information to the `pi` plugin: proposal status, vote duration, quorum, billing status changes, and error messages.
+- Added [end-to-end tests](https://github.com/decred/politeiagui/pull/2803) based on Cypress.
+- Implemented RFP [proposals and submissions](https://github.com/decred/politeiagui/pull/2848).
+- Reuse [view breakpoints](https://github.com/decred/politeiagui/pull/2849) from pi-ui (these control at which screen width the layout changes to one that better fits user's screen size).
+- Fixes { 2839 2853x3 2850 }
+- Code refactoring and cleanup { 2834 2843 2854 }
+
+{ image candidates: 2848 fun }
 
 
 ### Lightning Network
@@ -298,6 +328,7 @@ Other minor changes:
 Welcome to new first-time contributors with code merged to master:
 
 - Abirdcfly ([dcrd](https://github.com/decred/dcrd/commits?author=Abirdcfly))
+- herculesbrito ([herculesbrito](https://github.com/decred/decrediton/commits?author=herculesbrito))
 - norwnd ([dcrd](https://github.com/decred/dcrd/commits?author=norwnd))
 
 { _Discover and greet new non-developer contributors too._ }
