--- a/journal/202208.md
+++ b/journal/202208.md
@@ -184,10 +184,17 @@ _[dcrlnd](https://github.com/decred/dcrlnd) is Decred's Lightning Network node s
 
 { _Check https://github.com/decred/dcrlnd/commits/master ._}
 
+LN Daemon:
+
 - Add `EnforcePing` [RPC call](https://github.com/decred/dcrlnd/pull/163). This allows callers to direct dcrlnd to ping the specified peer and wait for the response. If the response fails to be received, then the peer is disconnected.
 - Added [stall detection and disconnection](https://github.com/decred/dcrlnd/pull/162) for peers. This is needed to handle situations where the computer running dcrlnd is suspended and then resumes after enough time has passed for the remote peer to have disconnected.
 - Reduce [peer idle timeout](https://github.com/decred/dcrlnd/commit/02793bc8d7e2fb1b0775f24b87bad4c892e62ba9) to 1 minute and 30 seconds, down from 5 minutes. A 5 minute idle timeout is excessive and prevents correct early detection of stalled peers.
 
+[Liquidity Provider Daemon](https://github.com/decred/dcrlnlpd):
+
+- Configured [GitHub Actions](https://github.com/decred/dcrlnlpd/pull/5) for automated builds.
+- Documented how the software [takes control](https://github.com/decred/dcrlnlpd/pull/4) of the outbound channels.
+- Added [TLS encryption](https://github.com/decred/dcrlnlpd/pull/6) support.
 
 
 ### DCRDEX
